@@ -400,14 +400,15 @@ namespace Mono.Unix {
 			switch (errno) {
 				case Native.Errno.EBADF:
 				case Native.Errno.EINVAL:        return new ArgumentException (message, p);
+
 				case Native.Errno.ERANGE:        return new ArgumentOutOfRangeException (message);
 				case Native.Errno.ENOTDIR:       return new DirectoryNotFoundException (message, p);
-				case Native.Errno.EFAULT:        return new NullReferenceException (message, p);
-
-				case Native.Errno.EACCES:
-				case Native.Errno.EISDIR:        return new UnauthorizedAccessException (message, p);
-
 				case Native.Errno.ENOENT:        return new FileNotFoundException (message, p);
+
+				case Native.Errno.EOPNOTSUPP:
+				case Native.Errno.EPERM:         return new InvalidOperationException (message, p);
+
+				case Native.Errno.ENOEXEC:       return new InvalidProgramException (message, p);
 
 				case Native.Errno.EIO:
 				case Native.Errno.ENOSPC:
@@ -416,12 +417,13 @@ namespace Mono.Unix {
 				case Native.Errno.EROFS:
 				case Native.Errno.ESPIPE:        return new IOException (message, p);
 
-				case Native.Errno.EOPNOTSUPP:
-				case Native.Errno.EPERM:         return new InvalidOperationException (message, p);
-
-				case Native.Errno.ENOEXEC:       return new InvalidProgramException (message, p);
+				case Native.Errno.EFAULT:        return new NullReferenceException (message, p);
 				case Native.Errno.EOVERFLOW:     return new OverflowException (message, p);
 				case Native.Errno.ENAMETOOLONG:  return new PathTooLongException (message, p);
+
+				case Native.Errno.EACCES:
+				case Native.Errno.EISDIR:        return new UnauthorizedAccessException (message, p);
+
 				default: /* ignore */     break;
 			}
 			return p;
