@@ -1,3 +1,8 @@
+2006-01-07  Jonathan Pryor <jonpryor@vt.edu>
+
+	* UnixMarshal.cs: *Actually* put things in alphabetical order (like the
+	  comment says).  I can speak english, really I can.
+
 2006-01-06  Jonathan Pryor <jonpryor@vt.edu>
 
 	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
